--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,300;0,500;1,100;1,300;1,500&family=Sacramento&display=swap" rel="stylesheet">
     <title>Spirit Savvy</title>
   </head>
   <body>
